--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toast-notifications": "^2.5.1",
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
     "typescript": "^4.3.5",
