--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
+    "@types/webspeechapi": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "eslint": "^7.32.0",
